--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
                 </p>
             </div>
         </div>
+    </div>
     
     <footer class="bg-custom py-4">
         <div class="container">
