--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://in.pinterest.com/search/pins/?q=gift%20hampers&rs=typed">Images</a>
                     </li>
+                    <li class="nav-item"></li>
+                        <a class="nav-link" target="_blank" href="https://drive.google.com/drive/folders/1nd6R_Df5KZyNy0nPMbC6XEHXQOmSrY6b?usp=drive_link">Hampers from Manoharam</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -280,6 +283,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="ordernow.html">Order a Gift Hamper</a></li>
                         <li><a href="https://in.pinterest.com/search/pins/?q=gift%20hampers&rs=typed">Images</a></li>
+                        <li><a href="https://drive.google.com/drive/folders/1nd6R_Df5KZyNy0nPMbC6XEHXQOmSrY6b?usp=drive_link">Hampers from Manoharam</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
